make stats button go to demo.html page

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -25,7 +25,7 @@
 	</div>     
 	<div class="row">
 		<div class="col-md-6 col-lg-12">
-			<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-stats" onclick="location.href='https://richbu.github.io/Pong2180_user_demo/'" >stats</button>
+			<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-stats" onclick="location.href='https://richbu.github.io/Pong2180_user_demo/demo.html'" >stats</button>
 			<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-user-2" onclick="location.href='https://pong2180-physics.herokuapp.com/users/mobile/2'">user 2</button>
 			<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-user-1" onclick="location.href='https://pong2180-physics.herokuapp.com/users/mobile/1'">user 1</button>
 		</div>
@@ -298,7 +298,6 @@
 			//			window.setTimeout( function() {
 			//				window.location.reload(true);
 			//			}, 10000 )
-
 		});
 
 	</script>
