super user now has _ instead of -

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -2,7 +2,7 @@
 
 -->
 <div id="varb-storage" data-time-started="{{time_started}}" data-samp-time="{{samp_time_ball}}" data-is-running="{{isRunning}}"
- data-time-stopped="{{time_stopped}}" data-speed-fact="{{speed_up_fact}}" data-user-num="{{user_num}}" data-super-user="{{super-user}}">
+ data-time-stopped="{{time_stopped}}" data-speed-fact="{{speed_up_fact}}" data-user-num="{{user_num}}" data-super-user="{{super_user}}">
 
 </div>
 <br/>
