--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -33,10 +33,16 @@
 
 	<div class="row">
 		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="play-addr" id="play-addr" placeholder="player address">
+			<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="play-addr-1" id="play-addr-1" placeholder="player address">
 		</div>
-		<div class="col-md-3 col-lg-3">
-			<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="send-addr">change address</button>
+		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
+			<button class='btn-large btn-warning' style="float: left; margin: 5px;" id="send-addr-1">change address</button>
+		</div>
+		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="play-addr-2" id="play-addr-2" placeholder="player 2 address">
+		</div>
+		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
+			<button class='btn-large btn-warning' style="float: left; margin: 5px;" id="send-addr-2">change address #2</button>
 		</div>
 	</div>
 
@@ -56,7 +62,7 @@
 		}
 
 		body {
-			background-image: url('matrixgridfloor.png');
+			background-image: url('../matrixgridfloor.png');
 		}
 
 		.monotonFont {
@@ -221,6 +227,13 @@
 				$('#btn-stats').css('display', 'none');
 				$('#btn-user-1').css('display', 'none');
 				$('#btn-user-2').css('display', 'none');
+				$('#play-addr-2').css('display', 'none');
+				$('#send-addr-2').css('display', 'none');
+			} else {
+				$('#play-addr-2').css('display', 'block');
+				$('#send-addr-2').css('display', 'block');
+				$('#play-addr-1').css('placeholder', 'player #1 address');
+				$('#send-addr-1').text('change address #1');
 			};
 
 			//set up vibration
