--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -32,20 +32,20 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
 			<input style="width: 90%; margin: 5px 0px 5px 0px;" class="form-control" type="text" name="play-addr-1" id="play-addr-1"
 			 placeholder="player address">
 		</div>
-		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
+		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-6">
 			<button class='btn-large btn-warning' style="float: left; margin: 5px;" id="send-addr-1">change address</button>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-12">
 			<input style="width: 90%; margin: 5px 0px 5px 0px;" class="form-control" type="text" name="play-addr-2" id="play-addr-2"
 			 placeholder="player 2 address">
 		</div>
-		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
+		<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-6">
 			<button class='btn-large btn-warning' style="float: left; margin: 5px;" id="send-addr-2">change address #2</button>
 		</div>
 	</div>
@@ -66,7 +66,7 @@
 		}
 
 		body {
-			background-image: url('../matrixgridfloor.png');
+			background-image: url('../../matrixgridfloor.png');
 		}
 
 		.monotonFont {
