paths to images

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -10,7 +10,7 @@
 <div id="varb-in" data-tim-int={{commTimeInt}}></div>
 <wrapper>
 	<div class="row">
-		<div class="col-md-3">
+		<div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12">
 			<h4>Engine Running</h4>
 			<h5 id="is_started">{{isRunning}} </h5>
 			<h5 id="time_elapsed">{{time_elapsed}}</h5>
@@ -66,7 +66,7 @@
 		}
 
 		body {
-			background-image: url('../../matrixgridfloor.png');
+			background-image: url('https://richbu.github.io/Pong2180_user_demo/assets/images/matrixgridfloor.png');
 		}
 
 		.monotonFont {
