tags for addr string

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -338,7 +338,7 @@
 				console.log('pressed addr #1 change');
 				var gameId = $('#varb-storage').attr('data-game-id');
 				var userNum = $('#varb-storage').attr('data-user-num');
-				var addrStr = $("#play-1-addr").val();
+				var addrStr = $("#play-addr-1").val();
 				var ballSampTime = $('#varb-storage').attr('data-samp-time');
 				var speedUpFact = $('#varb-storage').attr('data-speed-fact');
 				sendObj2.ball_samp_time = ballSampTime;
@@ -355,7 +355,7 @@
 				console.log('pressed addr #1 change');
 				var gameId = $('#varb-storage').attr('data-game-id');
 				var userNum = $('#varb-storage').attr('data-user-num');
-				var addrStr = $("#play-1-addr").val();
+				var addrStr = $("#play-addr-2").val();
 				var ballSampTime = $('#varb-storage').attr('data-samp-time');
 				var speedUpFact = $('#varb-storage').attr('data-speed-fact');
 				sendObj2.ball_samp_time = ballSampTime;
