--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
 
 </head>
 
-<body>
+<body id="body-main">
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
