--- a/app/views/admin/create.handlebars
+++ b/app/views/admin/create.handlebars
@@ -222,7 +222,7 @@
 					//there is no error
 					$("#newUserWarning").text(" ");
 					dispHelpNew(false);
-					window.location.href = "/admin/admin_users"
+					window.location.href = "/admin/admin_list"
 				} else {
 					currErrorObj.errCode = data.errCode;
 					currErrorObj.errLine = data.errLine;
