--- a/app/views/admin/audits.handlebars
+++ b/app/views/admin/audits.handlebars
@@ -10,11 +10,12 @@
 <h2> Audit Log </h2>
 <hr>
 <h4>Pick one:</h4>
-<button class='btn btn-primary' id="btn-log">Audit Log</button>
-<button class='btn btn-primary' id="btn-admin-list">Admin List</button>
-<button class='btn btn-primary btn-users' id="btn-users">User List</button>
-<button class='btn btn-primary btn-admin-pics' id="btn-admin-games">Games List</button>
-<button class='btn btn-primary btn-admin-pics' id="btn-admin-physics">Physics Engine</button>
+<button class='btn btn-warning' id="btn-log">Audit Log</button>
+<button class='btn btn-warning' id="btn-admin-list">Admin List</button>
+<button class='btn btn-warning btn-users' id="btn-users">User List</button>
+<button class='btn btn-warning' id="btn-admin-games">Games List</button>
+<button class='btn btn-warning' id="btn-admin-physics">Physics Engine</button>
+<button class='btn btn-warning' id="btn-mobile-super">Super User</button>
 <hr>
 
 
@@ -80,6 +81,9 @@
 		});
 		$(document.body).on("click", "#btn-admin-physics", function () {
 			window.location = "/physics";
+		});
+		$(document.body).on("click", "#btn-mobile-super", function () {
+			window.location = "/users/mobile/1/1";
 		});
 		$(document.body).on("click", "#btn-admin-pics", function () {
 			window.location = "/admin/files";
